// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalHeader Snapshots matches snapshot in RTL mode 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#e5e7eb",
      "borderBottomWidth": 1,
      "paddingHorizontal": 16,
      "paddingVertical": 12,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
        {
          "alignItems": "center",
          "flexDirection": "row-reverse",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "justifyContent": "center",
          "width": 44,
        }
      }
    />
    <Text
      style={
        [
          {
            "color": "#1e40af",
            "flex": 1,
            "fontSize": 17,
            "fontWeight": "600",
            "paddingHorizontal": 8,
            "textAlign": "center",
          },
          {
            "textAlign": "right",
          },
        ]
      }
    >
      Title
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
          {
            "alignItems": "center",
            "flexDirection": "row-reverse",
            "justifyContent": "flex-end",
            "width": 44,
          },
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        {
          "alignItems": "center",
          "flexDirection": "row-reverse",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      testID="network-status-indicator"
    />
    <View
      testID="language-selector"
    />
  </View>
</View>
`;

exports[`GlobalHeader Snapshots matches snapshot with all buttons 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#e5e7eb",
      "borderBottomWidth": 1,
      "paddingHorizontal": 16,
      "paddingVertical": 12,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "justifyContent": "center",
          "width": 44,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "padding": 4,
          }
        }
      >
        <Text
          testID="icon-chevron.left"
        >
          chevron.left
        </Text>
      </View>
    </View>
    <Text
      style={
        [
          {
            "color": "#1e40af",
            "flex": 1,
            "fontSize": 17,
            "fontWeight": "600",
            "paddingHorizontal": 8,
            "textAlign": "center",
          },
          false,
        ]
      }
    >
      Title
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "padding": 4,
          }
        }
      >
        <Text
          testID="icon-xmark"
        >
          xmark
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "padding": 4,
          }
        }
        testID="global-header-menu-button"
      >
        <Text
          testID="icon-line.3.horizontal"
        >
          line.3.horizontal
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      testID="network-status-indicator"
    />
    <View
      testID="language-selector"
    />
  </View>
</View>
`;

exports[`GlobalHeader Snapshots matches snapshot with default props 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#e5e7eb",
      "borderBottomWidth": 1,
      "paddingHorizontal": 16,
      "paddingVertical": 12,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "justifyContent": "center",
          "width": 44,
        }
      }
    />
    <Text
      style={
        [
          {
            "color": "#1e40af",
            "flex": 1,
            "fontSize": 17,
            "fontWeight": "600",
            "paddingHorizontal": 8,
            "textAlign": "center",
          },
          false,
        ]
      }
    >
      Header Title
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      testID="network-status-indicator"
    />
    <View
      testID="language-selector"
    />
  </View>
</View>
`;

exports[`GlobalHeader Snapshots matches snapshot with hideBottomSection 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#e5e7eb",
      "borderBottomWidth": 1,
      "paddingHorizontal": 16,
      "paddingVertical": 12,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "justifyContent": "center",
          "width": 44,
        }
      }
    />
    <Text
      style={
        [
          {
            "color": "#1e40af",
            "flex": 1,
            "fontSize": 17,
            "fontWeight": "600",
            "paddingHorizontal": 8,
            "textAlign": "center",
          },
          false,
        ]
      }
    >
      Title
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`GlobalHeader Snapshots matches snapshot with rightAction 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#e5e7eb",
      "borderBottomWidth": 1,
      "paddingHorizontal": 16,
      "paddingVertical": 12,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minHeight": 44,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "justifyContent": "center",
          "width": 44,
        }
      }
    />
    <Text
      style={
        [
          {
            "color": "#1e40af",
            "flex": 1,
            "fontSize": 17,
            "fontWeight": "600",
            "paddingHorizontal": 8,
            "textAlign": "center",
          },
          false,
        ]
      }
    >
      Title
    </Text>
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "width": 44,
          },
        ]
      }
    >
      <Text>
        Action
      </Text>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <View
      testID="network-status-indicator"
    />
    <View
      testID="language-selector"
    />
  </View>
</View>
`;
